--- a/css/reportes.css
+++ b/css/reportes.css
@@ -33,7 +33,6 @@ body{
     height: 100vh;
     font-size: 16px;
     font-family: 'Myriad Pro light',sans-serif;
- 
 }
 /* Navegación */
 .page-principal{
@@ -47,7 +46,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 5px;
     border-bottom: 2px solid gray;
 }
 .contenedor-links{
@@ -62,11 +61,14 @@ body{
     align-items: center;
     gap:.8em;
     text-decoration: none;
-    font-size: 1.3em;
+    font-size: 1em;
     font-weight: bold;
     color: black;
 }
-.logo-principal{
+.img-nav{/**/
+    width: 1.5em;
+}
+.logo-empresaK{/**/
     width: 3vw;
 }
 .log-out{
@@ -77,13 +79,13 @@ body{
 }
 
 .photo-user{
-    width: 4em;
+    width: 3em;
 }
 
 /*Vista principal*/
 .vista-principal{
     display: flex;
-    justify-content: space-around; 
+    justify-content: space-evenly; 
     align-items: center;
     margin-top: 50px;
 }
@@ -97,6 +99,7 @@ body{
     align-items: center;
     width: 35%;
     padding: 0 1em 2em 1em;
+    margin-bottom: 50px;
 }
 .text-incidentes{
     width: 80%;
@@ -107,7 +110,6 @@ body{
 }
 .text-incidentes p{
     text-align: justify;
-    opacity: .9;
     font-size: 1.2em;
 }
 
@@ -120,7 +122,6 @@ label,select,textarea{
 label{
     font-size: 1.2em;
     font-weight: bold;
-    margin-left: 10px;
 }
 select{
     padding: 1em;
@@ -128,7 +129,6 @@ select{
     border-radius: 10px;
     font-size: 1em;
     margin-bottom: 20px;
-    color: rgb(153, 153, 153);
     background-color:rgb(227, 227, 227);
 }
 textarea{
@@ -138,14 +138,13 @@ textarea{
     background-color: rgb(227, 227, 227);
     border: none;
     border-radius: 10px;
-    color: rgb(153, 153, 153);
 }
 
 .boton-texto{
     margin-top: 1em;
 }
 button{
-    padding: 1em 4em;
+    padding: .8em 3em;
     border: none;
     border-radius: 10px;
     background-color: rgb(255, 114, 33);
@@ -155,35 +154,50 @@ button{
 
 /*Sección encargados*/
 .personal{
-    width: 30%;
+    width: 45%;
+    margin: 0;
 }
 .contenedor-item{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5em;
+    flex-direction:column;
+    justify-content: center;
+    align-items:center;    
+    gap: 50px;
 }
 .personal__item{
     display: flex;
+    align-items: center;
     border: 2px solid rgb(197, 190, 190);
     border-radius: 15px;
-    padding: 5px 20px;
+    padding: .5em 5em .5em 1em;
 }
 .img-encargados{
-    width: 200px;
+    width: 150px;
     border-radius: 50%;
 }
 .texto-item{
     margin-left: 20px;
-    font-size:1.5em;
-    line-height: 1em;
+    font-size:1.2em;
+}
+.texto-item p{
+    line-height: 0;
+    width: 100%;
+}
+/*Iconos*/
+.iconos{
+    display: flex;
+    gap: 10px;
+}
+.iconos a i{
+    color: rgb(255, 114, 33);
+    font-size: 1.2em;
 }
 /*Medias -movil*/
 @media (max-width: 480px) { 
     /*Navegacion*/
     .page-principal{
         width: 100%;
-        height: 100vh;
+        height: auto    ;
         background-color: white;
     }
     .navegacion-principal{
@@ -203,6 +217,10 @@ button{
     .contenedor-links a{
         width: 33.3%;
         padding: 10px;
+        font-size: 1em;
+    }
+    .contenedor-links img{
+        width: 1.5em;
     }
     .logo-principal{
         padding: 10px;
@@ -217,6 +235,119 @@ button{
     }
     .photo-user{
         width: 4em;
+    }
+
+    /*Vista pricipal*/
+    
+    .vista-principal{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly; 
+        align-items: center;
+        margin-top: 10x;
+    }
+    /*Formulario*/
+
+    .formulario-incidentes{
+        border: 2px solid rgb(197, 190, 190);
+        border-radius: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 80%;
+        padding: 0 1em 2em 1em;
+        margin-bottom: 50px;
+    }
+    .text-incidentes{
+        width: 80%;
+    }
+    .text-incidentes h2{
+        text-align: center;
+        font-size: 1.3em;
+    }
+    .text-incidentes p{
+        text-align: justify;
+        font-size: .9em;
+    }
+
+    .requisitos{
+        width: 80%;
+    }
+    label,select,textarea{
+        width: 100%;
+    }
+    label{
+        font-size: .8em;
+        font-weight: bold;
+    }
+    select{
+        padding:.8em 1em;
+        border: none;
+        border-radius: 10px;
+        font-size: 1em;
+        margin-bottom: 20px;
+        background-color:rgb(227, 227, 227);
+    }
+    textarea{
+        min-width: 100%;
+        resize:none;
+        font-size: .8em;
+        background-color: rgb(227, 227, 227);
+        border: none;
+        border-radius: 10px;
+    }
+
+    .boton-texto{
+        margin-top: 1em;
+    }
+    button{
+        padding: .5em 2em;
+        border: none;
+        border-radius: 10px;
+        background-color: rgb(255, 114, 33);
+        font-size: .9em;
+        font-weight: bold;
+    }
+
+    /*Sección encargados*/
+    .personal{
+        width: 100%;
+        margin: 0;
+    }
+    .contenedor-item{
+        display: flex;
+        flex-direction:column;
+        justify-content: center;
+        align-items:center;    
+        gap: 50px;
+        margin-bottom: 50px;
+    }
+    .personal__item{
+        display: flex;
+        align-items: center;
+        border: 2px solid rgb(197, 190, 190);
+        border-radius: 15px;
+        padding: .5em 5em .5em 1em;
+    }
+    .img-encargados{
+        width: 150px;
+        border-radius: 50%;
+    }
+    .texto-item{
+        margin-left: 20px;
+        font-size:1em;
+    }
+    .texto-item p{
+        line-height: 0;
+    }
+    /*Iconos*/
+    .iconos{
+        display: flex;
+        gap: 10px;
+    }
+    .iconos a i{
+        color: rgb(255, 114, 33);
+        font-size: 1em;
     }
     
 }
