--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ input{
     animation-duration: 2s;
     animation-fill-mode: forwards;
     animation-delay: 13s;
+    z-index: 5;
 }
 .link__item,.img-nav{
     display: inline-block;
@@ -217,6 +218,30 @@ input{
 .photo-user{/**/
     width: 3em;
 }
+
+/*Perfil */
+.contenedor-log-in{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 10%;
+}
+details{
+    top: .2%;
+    right: .5%;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgb(255, 114, 33);
+    z-index: 10;
+}
+summary{
+    font-weight: bold;
+}
+.name-email p{
+    font-weight: ;
+}
+
 
 
 /*Medias -movil*/
