--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ input{
     padding: 1em 2em;
     border-radius: 25px;
     background-color: rgb(255,114, 27);
-    color: white;
+    color: white;   
     font-size: .8em;
     font-weight: bold;
     border: none;
@@ -174,6 +174,7 @@ input{
     animation-duration: 2s;
     animation-fill-mode: forwards;
     animation-delay: 13s;
+    overflow:scroll;
 }
 .link__item,.img-nav{
     display: inline-block;
@@ -217,6 +218,85 @@ input{
 .photo-user{/**/
     width: 3em;
 }
+section{
+    display: flex;
+    justify-content: center;
+}
+.text{
+    margin: 1vw;
+    text-align: center;
+}
+
+.text p{
+    margin: 0.5vw;
+}
+
+.action{
+    margin-top: 60px;
+    border: solid;
+    width: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+}
+
+.move{
+    display: flex;
+    align-items: center;
+    height: 60px;
+    border: solid 1px;
+}
+
+.move1{
+    margin-bottom: 2%;
+}
+
+section{
+    display: flex;
+    justify-content: center;
+}
+.container1{
+    height: 60px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+
+.container3{
+    height: 60px;
+    border: solid 1px rgb(145, 142, 142);
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 2%;
+}
+
+.item{
+    display: flex;
+    justify-content: center;
+    width: 9vw;
+}
+
+button{
+    height: 5vh;
+    width: 13vw;
+    border-radius: 25px;
+    border: none;
+    background-color: #f37730;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+button:hover{
+    background-color: #f37830b0;
+}
+
 
 /*Medias -movil*/
 @media (max-width: 480px) {
