--- a/css/styleadd.css
+++ b/css/styleadd.css
@@ -1,55 +1,85 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@font-face {
+    font-family: 'Myriad Pro Regular';
+    src: url(/fuentes/MYRIADPRO-REGULAR.woff);
+    font-style: normal;
+    font-weight: normal;
+}
+@font-face {
+    font-family: 'Myriad Pro light';
+    src: url(/fuentes/MyriadPro-Light.woff);
+    font-style: normal;
+    font-weight: normal;
 }
 
+@font-face {
+    font-family: 'Myriad Pro Italic';
+    src: url(/fuentes/MYRIADPRO-BOLDIT.woff);
+    font-style: italic;
+    font-weight: bold;
+    
+}
+@font-face {
+    font-family: 'Myriad Pro Bold';
+    src: url(/fuentes/MYRIADPRO-BOLD.woff);
+    font-style: bold;
+    font-weight: bold;
+}
+/*Entrada principal*/
 body{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100vh;
+    font-size: 16px;
+    font-family: 'Myriad Pro light',sans-serif;
 }
-
-header{
+/* Navegación */
+.page-principal{
+    width: 100%;
     background-color: white;
-    height: 60px;
-    padding: 10px;
-    padding-left:150px ;
+}
+.link__item,.img-nav{
+    display: inline-block;
+}
+.navegacion-principal{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: solid 2px rgb(152, 142, 142);
+    padding: 5px;
+    border-bottom: 2px solid gray;
 }
-
-header div{
+.contenedor-links{
+    width: 85%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.contenedor-links a{
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
-}
-
-a{
+    gap:.8em;
     text-decoration: none;
+    font-size: 1em;
+    font-weight: bold;
     color: black;
 }
-
-.logo img{
-    width: 30px;
+.img-nav{/**/
+    width: 1.5em;
+}
+.logo-empresaK{/**/
+    width: 3vw;
+}
+.log-out{
+    width: 10%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.logout{
-    margin-left: 120px;
-}
-
-header img{
-    margin-right: 8px;
-    width: 23px;
-}
-
-.foperfil{
-    width: 40px;
-    height: auto;
+.photo-user{
+    width: 3em;
 }
 
 section{
