--- a/css/styleadd.css
+++ b/css/styleadd.css
@@ -93,7 +93,7 @@ section {
     margin-top: 50px;
     padding: 35px;
     width: 80vw;
-    height: 83vh;
+    height: 700px;
     border-radius: 18px;
     background-color: rgb(226, 224, 224);
 }
@@ -144,7 +144,7 @@ section {
 .container1 textarea {
     font-size: 1.1rem;
     padding: 20px;
-    height: 13.5vh;
+    height: 100px;
     border-radius: 5px;
     resize: none;
 }
