--- a/css/reportes.css
+++ b/css/reportes.css
@@ -256,8 +256,7 @@ button{
         flex-direction: column;
         align-items: center;
         width: 80%;
-        padding: 0 1em 2em 1em;
-        margin-bottom: 50px;
+        padding:1em 2em 5em 2em;
     }
     .text-incidentes{
         width: 80%;
