--- a/css/style1.1.css
+++ b/css/style1.1.css
@@ -106,6 +106,7 @@ section{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
 }
 .container1{
     height: 60px;
@@ -134,6 +135,8 @@ section{
     display: flex;
     justify-content: center;
     width: 9vw;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .item img{
@@ -152,6 +155,7 @@ section{
 }
 
 .move{
+    border: solid;
     display: flex;
     align-items: center;
     height: 60px;
